--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 								<li><a href="mailto:NikkoMalonzo22@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 								<li><a href="https://www.linkedin.com/in/nikko-malonzo-618562102/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/Nikko-M" class="icon fa-github"><span class="label">Github</span></a></li>
-								<li><a href="#/images/Nikko_Malonzo_Web_Developer.PDF" class="icon fa-file-pdf"><span class="label">Resume</span></a></li>
+								<li><a href="https://nikko-m.github.io/images/Nikko_Malonzo_Web_Developer.PDF" class="icon fa-file-pdf"><span class="label">Resume</span></a></li>
 
 							</ul>
 							<hr />
